@@ -1,45 +1,42 @@
-/* main.c 
- * part of TeleGNOME, a GNOME app to view Teletext (Dutch)
+/* app.h
+ * Part of TeleGNOME, a GNOME app to view Teletext.
+ * This file declares the main TeleGNOME application.
  */
 
 /*
-**    Copyright (C) 1999, 2000,
-**    Dirk-Jan C. Binnema <djcb@dds.nl>,
-**    Arjan Scherpenisse <acscherp@wins.uva.nl>
-**    Copyright (C) 2016 Colin Watson <cjwatson@debian.org>
-**  
+** Copyright (C) 2016 Colin Watson <cjwatson@debian.org>
+**
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
 ** the Free Software Foundation; either version 2 of the License, or
 ** (at your option) any later version.
-**  
+**
 ** This program is distributed in the hope that it will be useful,
 ** but WITHOUT ANY WARRANTY; without even the implied warranty of
 ** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ** GNU General Public License for more details.
-**  
+**
 ** You should have received a copy of the GNU General Public License
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-**  
+**
 */
 
-#ifdef HAVE_CONFIG_H
-#include <config.h>
-#endif /* HAVE_CONFIG_H */
+#ifndef _APP_H_
+#define _APP_H_
 
-#include <libintl.h>
+#include <glib-object.h>
+#include <gtk/gtk.h>
 
-#include <gio/gio.h>
+G_BEGIN_DECLS
 
-#include "app.h"
+#define TG_TYPE_APP		    (tg_app_get_type ())
+G_DECLARE_FINAL_TYPE (TgApp, tg_app, TG, APP, GtkApplication)
 
-int 
-main (int argc, char **argv)
-{
-    bindtextdomain (GETTEXT_PACKAGE, GNOMELOCALEDIR);
-    bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
-    textdomain (GETTEXT_PACKAGE);
+GType tg_app_get_type (void);
 
-    return g_application_run (G_APPLICATION (tg_app_new ()), argc, argv);
-}
+TgApp *tg_app_new (void);
+
+G_END_DECLS
+
+#endif
