@@ -9,6 +9,7 @@ Changes in TeleGNOME 0.2.1
  * Port to new (as of GTK+ 2.4) GtkToolbar API.
  * Port from GdkDrawable to Cairo.
  * Port to GTK+ 3.
+ * Basic port to GtkApplication.
 
 Changes in TeleGNOME 0.2.0
 ==========================
